PodResourceLimits.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictedResources
metadata:
  name: pod-resource-restrictions
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces:
      - kube-system
      - gatekeeper-system
